--- a/main.html
+++ b/main.html
@@ -9,37 +9,88 @@
 
 <body>
     <h2 class="text-center">Cards Gallery</h2>
-	<div class="container d-flex flex-nowrap justify-content-between">
-		<section class="card">
-			<img src="https://storage.googleapis.com/acciojob-open-file-collections/image1.jpg"><br>
+	<div class="my-category scrollable_div">
+		<div class="list">
+		<div class="card my-card shadow ">
+			<img src="https://storage.googleapis.com/acciojob-open-file-collections/image1.jpg">
+			<div class="card-body">
 			<h6 class="text-center">Lorem Ipsum</h6>
-			<p class="card-text text-center p-3 ">You are tasked with creating a compact gallery using Bootstrap. The gallery should have the following characteristics</p>
-		</section>
-		<section class="card">
-			<img src="https://storage.googleapis.com/acciojob-open-file-collections/image1.jpg"><br>
+			<p class="card-text text-center ">You are tasked with creating a compact gallery using Bootstrap. The gallery should have the following characteristics</p>
+			</div>
+		</div>
+	   </div>
+		<div class="list">
+		<div class="card my-card shadow ">
+			<img src="https://storage.googleapis.com/acciojob-open-file-collections/image2.jpg"><br>
+			<div class="card-body">
 			<h6 class="text-center">Lorem Ipsum</h6>
-			<p class="card-text text-center p-3 ">You are tasked with creating a compact gallery using Bootstrap. The gallery should have the following characteristics</p>
-		</section>
-		<section class="card">
-			<img src="https://storage.googleapis.com/acciojob-open-file-collections/image1.jpg"><br>
+			<p class="card-text text-center ">You are tasked with creating a compact gallery using Bootstrap. The gallery should have the following characteristics</p>
+			</div>
+		</div>
+	   </div>
+		<div class="list">
+		<div class="card my-card shadow ">
+			<img src="https://storage.googleapis.com/acciojob-open-file-collections/image3.jpg"><br>
+			<div class="card-body">
 			<h6 class="text-center">Lorem Ipsum</h6>
-			<p class="card-text text-center p-3 ">You are tasked with creating a compact gallery using Bootstrap. The gallery should have the following characteristics</p>
-		</section>
-		<section class="card">
-			<img src="https://storage.googleapis.com/acciojob-open-file-collections/image1.jpg"><br>
+			<p class="card-text text-center ">You are tasked with creating a compact gallery using Bootstrap. The gallery should have the following characteristics</p>
+			</div>
+		</div>
+	   </div>
+		<div class="list">
+		<div class="card my-card shadow ">
+			<img src="https://storage.googleapis.com/acciojob-open-file-collections/image4.jpg"><br>
+			<div class="card-body">
 			<h6 class="text-center">Lorem Ipsum</h6>
-			<p class="card-text text-center p-3 ">You are tasked with creating a compact gallery using Bootstrap. The gallery should have the following characteristics</p>
-		</section>
-		<section class="card">
-			<img src="https://storage.googleapis.com/acciojob-open-file-collections/image1.jpg"><br>
+			<p class="card-text text-center ">You are tasked with creating a compact gallery using Bootstrap. The gallery should have the following characteristics</p>
+			</div>
+		</div>
+	   </div>
+		<div class="list">
+		<div class="card my-card shadow ">
+			<img src="https://storage.googleapis.com/acciojob-open-file-collections/image5.jpg"><br>
+			<div class="card-body">
 			<h6 class="text-center">Lorem Ipsum</h6>
-			<p class="card-text text-center p-3 ">You are tasked with creating a compact gallery using Bootstrap. The gallery should have the following characteristics</p>
-		</section>
-		<section class="card">
-			<img src="https://storage.googleapis.com/acciojob-open-file-collections/image1.jpg"><br>
+			<p class="card-text text-center ">You are tasked with creating a compact gallery using Bootstrap. The gallery should have the following characteristics</p>
+			</div>
+		</div>
+	   </div>
+		<div class="list">
+		<div class="card my-card shadow ">
+			<img src="https://storage.googleapis.com/acciojob-open-file-collections/image6.jpg"><br>
+			<div class="card-body">
 			<h6 class="text-center">Lorem Ipsum</h6>
-			<p class="card-text text-center p-3 ">You are tasked with creating a compact gallery using Bootstrap. The gallery should have the following characteristics</p>
-		</section>
+			<p class="card-text text-center ">You are tasked with creating a compact gallery using Bootstrap. The gallery should have the following characteristics</p>
+			</div>
+		</div>
+	   </div>
+		<div class="list">
+		<div class="card my-card shadow ">
+			<img src="https://storage.googleapis.com/acciojob-open-file-collections/image7.jpg"><br>
+			<div class="card-body">
+			<h6 class="text-center">Lorem Ipsum</h6>
+			<p class="card-text text-center ">You are tasked with creating a compact gallery using Bootstrap. The gallery should have the following characteristics</p>
+			</div>
+		</div>
+	   </div>
+		<div class="list">
+		<div class="card my-card shadow ">
+			<img src="https://storage.googleapis.com/acciojob-open-file-collections/image8.jpg"><br>
+			<div class="card-body">
+			<h6 class="text-center">Lorem Ipsum</h6>
+			<p class="card-text text-center ">You are tasked with creating a compact gallery using Bootstrap. The gallery should have the following characteristics</p>
+			</div>
+		</div>
+	   </div>
+		<div class="list">
+		<div class="card my-card shadow ">
+			<img src="https://storage.googleapis.com/acciojob-open-file-collections/image9.jpg"><br>
+			<div class="card-body">
+			<h6 class="text-center">Lorem Ipsum</h6>
+			<p class="card-text text-center ">You are tasked with creating a compact gallery using Bootstrap. The gallery should have the following characteristics</p>
+			</div>
+		</div>
+	   </div>
 	</div>
 
 
