--- a/main.html
+++ b/main.html
@@ -10,11 +10,11 @@
 <body>
    <h2 class="text-center">Cards Gallery</h2>
 
-	<div class="container">
+	
 		<div class="row">
             <div class="column d-flex justify-content-between">
 				<div class="card my-card shadow">
-					<img class="card-img-top" src="https://storage.googleapis.com/acciojob-open-file-collections/image1.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow">
+					<img class="card-img-top lightbox" src="https://storage.googleapis.com/acciojob-open-file-collections/image1.jpg">
 				     <div class="card-body">
 						 <h6 class="text-center">Lorem Ipsum</h6>
 						 <p class="text-center">The text inside the headings and paragraphs must be center-aligned. Cards should have a border radius.</p>
@@ -45,7 +45,7 @@
 		<div class="row mt-4">
             <div class="column d-flex justify-content-between">
 				<div class="card my-card shadow">
-					<img class="card-img-top" src="https://storage.googleapis.com/acciojob-open-file-collections/image4.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow">
+					<img class="card-img-top" src="https://storage.googleapis.com/acciojob-open-file-collections/image4.jpg" >
 				     <div class="card-body">
 						 <h6 class="text-center">Lorem Ipsum</h6>
 						 <p class="text-center">The text inside the headings and paragraphs must be center-aligned. Cards should have a border radius.</p>
@@ -73,7 +73,6 @@
 
 			
 		</div>
-	</div>
 
 	
 	<!-- the entire body must be written by student -->
