--- a/main.html
+++ b/main.html
@@ -8,14 +8,17 @@
 </head>
 
 <body>
+	
    <h2 class="text-center">Cards Gallery</h2>
 
 	
 		<div class="row">
             <div class="column d-flex justify-content-between">
 				<div class="card my-card shadow">
-					<img class="card-img-top lightbox" src="https://storage.googleapis.com/acciojob-open-file-collections/image1.jpg">
-				     <div class="card-body">
+<a href="https://storage.googleapis.com/acciojob-open-file-collections/image1.jpg" data-toggle="lightbox" data-gallery="example-gallery">
+    <img class="card-img-top" src="https://storage.googleapis.com/acciojob-open-file-collections/image1.jpg">
+  </a>		
+					<div class="card-body">
 						 <h6 class="text-center">Lorem Ipsum</h6>
 						 <p class="text-center">The text inside the headings and paragraphs must be center-aligned. Cards should have a border radius.</p>
 					 </div>
@@ -23,8 +26,10 @@
 			</div>
 			<div class="column">
 				<div class="card my-card shadow">
-					<img class="card-img-top" src="https://storage.googleapis.com/acciojob-open-file-collections/image2.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow">
-				     <div class="card-body">
+<a href="https://storage.googleapis.com/acciojob-open-file-collections/image2.jpg" data-toggle="lightbox" data-gallery="example-gallery">
+    <img class="card-img-top" src="https://storage.googleapis.com/acciojob-open-file-collections/image2.jpg">
+  </a>	
+					<div class="card-body">
 						 <h6 class="text-center">Lorem Ipsum</h6>
 						 <p class="text-center">The text inside the headings and paragraphs must be center-aligned. Cards should have a border radius.</p>
 					 </div>
@@ -32,8 +37,10 @@
 			</div>
 			<div class="column">
 				<div class="card my-card shadow">
-					<img class="card-img-top" src="https://storage.googleapis.com/acciojob-open-file-collections/image3.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow">
-				     <div class="card-body">
+<a href="https://storage.googleapis.com/acciojob-open-file-collections/image3.jpg" data-toggle="lightbox" data-gallery="example-gallery">
+    <img class="card-img-top" src="https://storage.googleapis.com/acciojob-open-file-collections/image4.jpg">
+  </a>				
+					<div class="card-body">
 						 <h6 class="text-center">Lorem Ipsum</h6>
 						 <p class="text-center">The text inside the headings and paragraphs must be center-aligned. Cards should have a border radius.</p>
 					 </div>
@@ -45,8 +52,10 @@
 		<div class="row mt-4">
             <div class="column d-flex justify-content-between">
 				<div class="card my-card shadow">
-					<img class="card-img-top" src="https://storage.googleapis.com/acciojob-open-file-collections/image4.jpg" >
-				     <div class="card-body">
+<a href="https://storage.googleapis.com/acciojob-open-file-collections/image4.jpg" data-toggle="lightbox" data-gallery="example-gallery">
+    <img class="card-img-top" src="https://storage.googleapis.com/acciojob-open-file-collections/image4.jpg">
+  </a>	
+					<div class="card-body">
 						 <h6 class="text-center">Lorem Ipsum</h6>
 						 <p class="text-center">The text inside the headings and paragraphs must be center-aligned. Cards should have a border radius.</p>
 					 </div>
@@ -54,8 +63,10 @@
 			</div>
 			<div class="column">
 				<div class="card my-card shadow">
-					<img class="card-img-top" src="https://storage.googleapis.com/acciojob-open-file-collections/image5.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow">
-				     <div class="card-body">
+<a href="https://storage.googleapis.com/acciojob-open-file-collections/image5.jpg" data-toggle="lightbox" data-gallery="example-gallery">
+    <img class="card-img-top" src="https://storage.googleapis.com/acciojob-open-file-collections/image5.jpg">
+  </a>	
+					<div class="card-body">
 						 <h6 class="text-center">Lorem Ipsum</h6>
 						 <p class="text-center">The text inside the headings and paragraphs must be center-aligned. Cards should have a border radius.</p>
 					 </div>
@@ -63,8 +74,10 @@
 			</div>
 			<div class="column">
 				<div class="card my-card shadow">
-					<img class="card-img-top" src="https://storage.googleapis.com/acciojob-open-file-collections/image6.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow">
-				     <div class="card-body">
+<a href="https://storage.googleapis.com/acciojob-open-file-collections/image6.jpg" data-toggle="lightbox" data-gallery="example-gallery">
+    <img class="card-img-top" src="https://storage.googleapis.com/acciojob-open-file-collections/image6.jpg">
+  </a>	
+					<div class="card-body">
 						 <h6 class="text-center">Lorem Ipsum</h6>
 						 <p class="text-center">The text inside the headings and paragraphs must be center-aligned. Cards should have a border radius.</p>
 					 </div>
@@ -79,6 +92,12 @@
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./script.js">
+	<script>
+  $(document).on('click', '[data-toggle="lightbox"]', function(event) {
+    event.preventDefault();
+    $(this).ekkoLightbox();
+  });
+</script>
 </script>
 
 </body>
