--- a/main.html
+++ b/main.html
@@ -15,9 +15,8 @@
 		<div class="row">
             <div class="column d-flex justify-content-between">
 				<div class="card my-card shadow">
-<a href="https://storage.googleapis.com/acciojob-open-file-collections/image1.jpg" data-toggle="lightbox" data-gallery="example-gallery">
-    <img class="card-img-top" src="https://storage.googleapis.com/acciojob-open-file-collections/image1.jpg">
-  </a>		
+                <a href="https://storage.googleapis.com/acciojob-open-file-collections/image1.jpg" data-toggle="lightbox" data-gallery="example-gallery">
+                <img class="card-img-top" src="https://storage.googleapis.com/acciojob-open-file-collections/image1.jpg"></a>		
 					<div class="card-body">
 						 <h6 class="text-center">Lorem Ipsum</h6>
 						 <p class="text-center">The text inside the headings and paragraphs must be center-aligned. Cards should have a border radius.</p>
@@ -26,9 +25,8 @@
 			</div>
 			<div class="column">
 				<div class="card my-card shadow">
-<a href="https://storage.googleapis.com/acciojob-open-file-collections/image2.jpg" data-toggle="lightbox" data-gallery="example-gallery">
-    <img class="card-img-top" src="https://storage.googleapis.com/acciojob-open-file-collections/image2.jpg">
-  </a>	
+                <a href="https://storage.googleapis.com/acciojob-open-file-collections/image2.jpg" data-toggle="lightbox" data-gallery="example-gallery">
+                <img class="card-img-top" src="https://storage.googleapis.com/acciojob-open-file-collections/image2.jpg"></a>	
 					<div class="card-body">
 						 <h6 class="text-center">Lorem Ipsum</h6>
 						 <p class="text-center">The text inside the headings and paragraphs must be center-aligned. Cards should have a border radius.</p>
