--- a/main.html
+++ b/main.html
@@ -1,103 +1,102 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Cards Gallery</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css" />
+	<link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
-	
-   <h2 class="text-center">Cards Gallery</h2>
-
-	
-		<div class="row">
-            <div class="column d-flex justify-content-between">
-				<div class="card my-card shadow">
-                <a href="https://storage.googleapis.com/acciojob-open-file-collections/image1.jpg" data-toggle="lightbox" data-gallery="example-gallery">
-                <img class="card-img-top" src="https://storage.googleapis.com/acciojob-open-file-collections/image1.jpg"></a>		
-					<div class="card-body">
-						 <h6 class="text-center">Lorem Ipsum</h6>
-						 <p class="text-center">The text inside the headings and paragraphs must be center-aligned. Cards should have a border radius.</p>
-					 </div>
+	<section class="gallery-block cards-gallery">
+		<div class="container">
+			<div class="heading">
+				<h2>Cards Gallery</h2>
+			</div>
+			<div class="row">
+				<div class="col-md-6 col-lg-4">
+					<div class="card border-0 transform-on-hover">
+						<a class="lightbox" href="https://storage.googleapis.com/acciojob-open-file-collections/image1.jpg">
+							<img src="https://storage.googleapis.com/acciojob-open-file-collections/image1.jpg" alt="Card Image" class="card-img-top">
+						</a>
+						<div class="card-body">
+							<h6><a href="#">Lorem Ipsum</a></h6>
+							<p class="text-muted card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+								Nunc quam urna.</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6 col-lg-4">
+					<div class="card border-0 transform-on-hover">
+						<a class="lightbox" href="https://storage.googleapis.com/acciojob-open-file-collections/image2.jpg">
+							<img src="https://storage.googleapis.com/acciojob-open-file-collections/image2.jpg" alt="Card Image" class="card-img-top">
+						</a>
+						<div class="card-body">
+							<h6><a href="#">Lorem Ipsum</a></h6>
+							<p class="text-muted card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+								Nunc quam urna.</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6 col-lg-4">
+					<div class="card border-0 transform-on-hover">
+						<a class="lightbox" href="https://storage.googleapis.com/acciojob-open-file-collections/image3.jpg">
+							<img src="https://storage.googleapis.com/acciojob-open-file-collections/image3.jpg" alt="Card Image" class="card-img-top">
+						</a>
+						<div class="card-body">
+							<h6><a href="#">Lorem Ipsum</a></h6>
+							<p class="text-muted card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+								Nunc quam urna.</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6 col-lg-4">
+					<div class="card border-0 transform-on-hover">
+						<a class="lightbox" href="https://storage.googleapis.com/acciojob-open-file-collections/image4.jpg">
+							<img src="https://storage.googleapis.com/acciojob-open-file-collections/image4.jpg" alt="Card Image" class="card-img-top">
+						</a>
+						<div class="card-body">
+							<h6><a href="#">Lorem Ipsum</a></h6>
+							<p class="text-muted card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+								Nunc quam urna.</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6 col-lg-4">
+					<div class="card border-0 transform-on-hover">
+						<a class="lightbox" href="https://storage.googleapis.com/acciojob-open-file-collections/image5.jpg">
+							<img src="https://storage.googleapis.com/acciojob-open-file-collections/image5.jpg" alt="Card Image" class="card-img-top">
+						</a>
+						<div class="card-body">
+							<h6><a href="#">Lorem Ipsum</a></h6>
+							<p class="text-muted card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+								Nunc quam urna.</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6 col-lg-4">
+					<div class="card border-0 transform-on-hover">
+						<a class="lightbox" href="https://storage.googleapis.com/acciojob-open-file-collections/image6.jpg">
+							<img src="https://storage.googleapis.com/acciojob-open-file-collections/image6.jpg" alt="Card Image" class="card-img-top">
+						</a>
+						<div class="card-body">
+							<h6><a href="#">Lorem Ipsum</a></h6>
+							<p class="text-muted card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+								Nunc quam urna.</p>
+						</div>
+					</div>
 				</div>
 			</div>
-			<div class="column">
-				<div class="card my-card shadow">
-                <a href="https://storage.googleapis.com/acciojob-open-file-collections/image2.jpg" data-toggle="lightbox" data-gallery="example-gallery">
-                <img class="card-img-top" src="https://storage.googleapis.com/acciojob-open-file-collections/image2.jpg"></a>	
-					<div class="card-body">
-						 <h6 class="text-center">Lorem Ipsum</h6>
-						 <p class="text-center">The text inside the headings and paragraphs must be center-aligned. Cards should have a border radius.</p>
-					 </div>
-				</div>
-			</div>
-			<div class="column">
-				<div class="card my-card shadow">
-<a href="https://storage.googleapis.com/acciojob-open-file-collections/image3.jpg" data-toggle="lightbox" data-gallery="example-gallery">
-    <img class="card-img-top" src="https://storage.googleapis.com/acciojob-open-file-collections/image4.jpg">
-  </a>				
-					<div class="card-body">
-						 <h6 class="text-center">Lorem Ipsum</h6>
-						 <p class="text-center">The text inside the headings and paragraphs must be center-aligned. Cards should have a border radius.</p>
-					 </div>
-				</div>
-			</div>
-
-			
 		</div>
-		<div class="row mt-4">
-            <div class="column d-flex justify-content-between">
-				<div class="card my-card shadow">
-<a href="https://storage.googleapis.com/acciojob-open-file-collections/image4.jpg" data-toggle="lightbox" data-gallery="example-gallery">
-    <img class="card-img-top" src="https://storage.googleapis.com/acciojob-open-file-collections/image4.jpg">
-  </a>	
-					<div class="card-body">
-						 <h6 class="text-center">Lorem Ipsum</h6>
-						 <p class="text-center">The text inside the headings and paragraphs must be center-aligned. Cards should have a border radius.</p>
-					 </div>
-				</div>
-			</div>
-			<div class="column">
-				<div class="card my-card shadow">
-<a href="https://storage.googleapis.com/acciojob-open-file-collections/image5.jpg" data-toggle="lightbox" data-gallery="example-gallery">
-    <img class="card-img-top" src="https://storage.googleapis.com/acciojob-open-file-collections/image5.jpg">
-  </a>	
-					<div class="card-body">
-						 <h6 class="text-center">Lorem Ipsum</h6>
-						 <p class="text-center">The text inside the headings and paragraphs must be center-aligned. Cards should have a border radius.</p>
-					 </div>
-				</div>
-			</div>
-			<div class="column">
-				<div class="card my-card shadow">
-<a href="https://storage.googleapis.com/acciojob-open-file-collections/image6.jpg" data-toggle="lightbox" data-gallery="example-gallery">
-    <img class="card-img-top" src="https://storage.googleapis.com/acciojob-open-file-collections/image6.jpg">
-  </a>	
-					<div class="card-body">
-						 <h6 class="text-center">Lorem Ipsum</h6>
-						 <p class="text-center">The text inside the headings and paragraphs must be center-aligned. Cards should have a border radius.</p>
-					 </div>
-				</div>
-			</div>
-
-			
-		</div>
-
-	
-	<!-- the entire body must be written by student -->
-	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="./script.js">
+	</section>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
 	<script>
-  $(document).on('click', '[data-toggle="lightbox"]', function(event) {
-    event.preventDefault();
-    $(this).ekkoLightbox();
-  });
-</script>
-</script>
-
+		baguetteBox.run('.cards-gallery', { animation: 'slideIn' });
+	</script>
 </body>
 
 </html>
